# wegofwd-llm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  watch.yml
.watch/: README.md
docs/: shared_service.drawio
schema/: content-trust-manifest.v1.json
tests/: test_allowlist.py  test_anthropic_native.py  test_conformance.py  test_openai_compatible.py  test_registry.py  test_trust.py  test_versioning.py
wegofwd_llm/: __init__.py  anthropic_native.py  conformance.py  contract.py  errors.py  openai_compatible.py  registry.py  trust.py
