[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wegofwd-llm"
version = "0.1.0"
description = "Shared multi-provider LLM seam (provider-agnostic request/response, registry, JSON conformance) for the wegofwd product family."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sivakumar Mambakkam" }]
license = { text = "Proprietary" }

# Runtime deps are deliberately minimal. The Anthropic SDK is an OPTIONAL extra so
# managed/OpenAI-compatible-only consumers don't pull it in; anthropic_native.py
# imports it lazily and raises LLMConfigurationError if the extra is absent.
# httpx is pinned loosely — consumers pin the exact version (Mentible couples
# anthropic==0.28.0 ↔ httpx==0.27.2).
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.28,<1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "anthropic>=0.28,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wegofwd_llm"]

# ── Ruff (mirrors the consumers' config so a file passes lint identically here) ──
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "RUF"]
ignore = [
    "E501",   # handled by formatter
    "S101",   # assert in tests
    "RUF001", # ambiguous unicode in strings (EN DASH in docstrings)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["wegofwd_llm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
